# ai-finance-assistant

./: .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt
ai_finance_assistant.egg-info/: PKG-INFO  SOURCES.txt
data/kb/: glossary.csv  knowledge_base_manifest.csv
data/kb/docs/: kb-0001-what-is-investing-vs-saving.md  kb-0002-what-is-investing-vs-saving.md  (+109 more)
docs/: KB_VALIDATION.md  STAGE5_MARKET_DATA.md  STAGE6_QUANT.md  STAGE7_AGENTS.md  STAGE8_LANGGRAPH.md
scripts/: agents_smoke.py  build_kb_index.py  market_smoke.py  quant_smoke.py  query_kb.py  validate_kb.py
src/agents/: base_agent.py  finance_qa_agent.py  goal_agent.py  market_agent.py  news_agent.py  portfolio_agent.py  quant_agent.py  tax_agent.py
src/core/: config.py  langchain_factory.py  llm_client.py  router.py  schemas.py
src/pages/: chat.py  goals.py  market.py  news.py  portfolio.py  tax.py
src/rag/: __init__.py  chunking.py  embeddings.py  ingest.py  retriever.py  web_search.py
src/tools/: quant_tools.py
src/utils/: answer_format.py  cache.py  kb_cli.py  kb_loader.py  kb_models.py  llm_init.py  logging.py  market_data.py  quant_engine.py  quant_models.py  validators.py  web_search.py
src/web_app/: agent_helpers.py  app.py  app_bck.py  ui_helpers.py
src/workflow/: graph.py  router.py  state.py
tests/: conftest.py  llm_type_smoke.py  run_graph_smoke.py  test_agent_fixes.py  test_agents_contracts.py  test_graph_integration.py  test_import.py  test_market_data_service.py  test_quant_engine_goal.py  test_quant_engine_portfolio.py  test_rag_pipeline.py
(+6 files in other folders)
